Add messages crud, updated owner cabinet, and layout

--- a/src/myhouse_admin/templates/cashbox/cb_list.html
+++ b/src/myhouse_admin/templates/cashbox/cb_list.html
@@ -118,10 +118,10 @@
         <div class="card-footer">
             <div class="row"></div>
             <div class="row">
-                Проведен приход:<span><strong>{{sum_in|stringformat:".2f"}} грн.</strong></span>
+                Проведен приход:&nbsp;<strong>{{sum_in|stringformat:".2f"}} грн.</strong>
             </div>
             <div class="row">
-                Проведен расход:<span><strong>{{sum_out|stringformat:".2f"}} грн.</strong></span>
+                Проведен расход:&nbsp;<strong>{{sum_out|stringformat:".2f"}} грн.</strong>
             </div>
         </div>
         {% endif %}
