--- a/src/myhouse_admin/templates/receipts/receipt_detail.html
+++ b/src/myhouse_admin/templates/receipts/receipt_detail.html
@@ -13,7 +13,7 @@
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
-                    <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:receipt_list' %}" class="text-dark">Счетчики</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:receipt_list' %}" class="text-dark">Квитанции</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Квитанция №{{receipt.number}}</li>
                 </ol>
             </nav>
