--- a/src/myhouse_admin/templates/tickets/ticket_detail.html
+++ b/src/myhouse_admin/templates/tickets/ticket_detail.html
@@ -36,7 +36,12 @@
                     <div class="form-group g-3 mt-2">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <span class="input-group-text" id="time-addon1"><i class="fa fa-calendar"></i></span>
+                                <span class="input-group-text" id="time-addon1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                                        <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                                        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+                                    </svg>
+                                </span>
                             </div>
                             <input type="text" class="form-control w-60" aria-describedby="time-addon1" value="{{ ticket.convenient_time|date:"H:i" }}" disabled>
                         </div>
