--- a/src/myhouse_admin/templates/users/owner_detail.html
+++ b/src/myhouse_admin/templates/users/owner_detail.html
@@ -22,7 +22,7 @@
     <section class="content">
         <div class="card">
             <div class="card-header row d-flex justify-content-end">
-                <a href="{% url 'users:open_cabinet' %}?owner_ID={{owner.ID}}" class="btn btn-default mr-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square" viewBox="0 0 16 16">
+                <a target="_blank" href="{% url 'users:open_cabinet' %}?owner_ID={{owner.ID}}" class="btn btn-default mr-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right-square" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 8.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"/>
                     </svg>Перейти в кабинет</a>
                 <a href="{% url 'myhouse_admin:owner_update' owner.pk %}" class="btn btn-primary">Редактировать профиль</a>
@@ -109,7 +109,13 @@
                             <td><a href="{% url 'myhouse_admin:house_detail' flat.floor.section.house.pk %}" class="text-decoration-none">{{flat.floor.section.house}}</a></td>
                             <td>{{flat.floor.section}}</td>
                             <td><a href="{% url 'myhouse_admin:flat_detail' flat.pk %}" class="text-decoration-none">{{flat.number}}</a></td>
-                            <td>{{flat.flat_personal_account|default_if_none:"не указано"}}</td>
+                            <td>
+                                {% if flat.flat_personal_account is not None %}
+                                    <a href="{% url 'myhouse_admin:personal_account_detail' flat.flat_personal_account.pk %}">{{flat.flat_personal_account}}</a>
+                                {% else %}
+                                    не указано
+                                {% endif %}
+                            </td>
                         </tr>
                         {% endfor %}
                     </tbody>
