--- a/src/users/templates/cabinet_messages/message_list.html
+++ b/src/users/templates/cabinet_messages/message_list.html
@@ -6,54 +6,45 @@
 
 {% block messages %}bg-light{% endblock messages %}
 
-{% block extra_css %}
-    <link rel="stylesheet" href="{% static 'plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}">
-{% endblock extra_css %}
-
 {% block main_content %}
 <section class="content-header d-flex justify-content-between">
     <h1>Сообщения</h1>
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'users:summary' %}{% if owner_ID is not None %}?owner_ID={{owner_ID}}{% endif %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
             <li class="breadcrumb-item active" aria-current="page">Сообщения</li>
         </ol>
     </nav>
 </section>
 <div class="dropdown-divider"></div>
 <div class="content">
-    <div class="row d-flex justify-content-end my-3 mr-3">
-        <a href="{% url 'myhouse_admin:message_create' %}" class="btn btn-success">Отправить сообщение</a>
-    </div>
     <div class="card mx-2">
         <div class="card-body table-responsive p-0">
             {% csrf_token %}
             <div class="row d-flex">
-                <div class="icheck-primary ml-5">
-                    <input type="checkbox" id='id_selection_all' name='selection_all' value="1">
-                    <label for="id_selection_all" class="mt-2"></label>
+                <div class="form-check ml-5 mt-3">
+                    <input class="form-check-input" type="checkbox" id='id_selection_all' name='selection_all' value="1">
                 </div>
-                <button type="button" id="id_delete_many" class="btn btn-default mt-2" title="Удалить выбранные" delete-url="{% url 'myhouse_admin:message_delete_many' %}"><i class="fa fa-trash"></i></button>
+                <button type="button" id="id_delete_many" class="btn btn-default mt-2" title="Удалить выбранные" delete-url="{% url 'users:message_delete_many' %}{% if owner_ID is not None %}?owner_ID={{owner_ID}}{% endif %}"><i class="fa fa-trash"></i></button>
             </div>
             <table class="table table-striped mx-2" id="id_message_table">
                 <thead>
                     <tr>
                         <th></th>
-                        <th>Получатели</th>
+                        <th>От кого</th>
                         <th>Текст</th>
                         <th>Дата</th>
                     </tr>
                 </thead>
                 <tbody>
                 {% for message in messages %}
-                    <tr data-href="{% url 'myhouse_admin:message_detail' message.pk %}">
+                    <tr data-href="{% url 'users:message_detail' message.pk %}{% if owner_ID is not None %}?owner_ID={{owner_ID}}{% endif %}">
                         <td>
-                            <div class="icheck-primary">
-                                <input type="checkbox" name='message_check' value="{{message.pk}}" id="id_check_{{forloop.counter}}">
-                                <label for="id_check_{{forloop.counter}}"></label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" name='message_check' value="{{message.pk}}">
                             </div>
                         </td>
-                        <td>{{message.recipients_to_str}}</td>
+                        <td>{{message.sender.user.get_full_name}}</td>
                         <td>{{message.body|safe}}</td>
                         <td>{{message.send_date|date:"d.m.Y - H:i"}}</td>
                     </tr>
