--- a/src/users/templates/summary/tariffs.html
+++ b/src/users/templates/summary/tariffs.html
@@ -4,13 +4,15 @@
 
 {% block title %}Тарифы - {{flat.floor.section.house}}, кв.{{flat.number}}{% endblock title %}
 
+{% block tariffs %}active{% endblock tariffs %}
+
 {% block main_content %}
     <div class="container-fluid">
         <section class="content-header d-flex justify-content-between">
             <h1 class="ml-3">Тарифы - {{flat.floor.section.house}}, кв.{{flat.number}}</h1>
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="{% url 'myhouse_admin:index' %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
+                    <li class="breadcrumb-item"><a href="{% url 'users:summary' %}{% if owner_ID is not None %}?owner_ID={{owner_ID}}{% endif %}" class="text-dark"><i class="fa fa-home"></i> Главная</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Тарифы - {{flat.floor.section.house}}, кв.{{flat.number}}</li>
                 </ol>
             </nav>
